--- a/leveldb/src/main/AndroidManifest.xml
+++ b/leveldb/src/main/AndroidManifest.xml
@@ -1,10 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.leveldb">
-
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
-
-    </application>
+    package="com.github.hf.leveldb">
 
 </manifest>
