Change leveldb submodule to GitHub

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "leveldb/jni/leveldb"]
-	path = leveldb/jni/leveldb
-	url = https://code.google.com/p/leveldb/
 [submodule "leveldb/src/main/jni-prebuild/leveldb"]
 	path = leveldb/src/main/jni-prebuild/leveldb
-	url = https://code.google.com/p/leveldb/
+	url = https://github.com/google/leveldb.git
