--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.hf.leveldb">
+    package="com.github.hf.example.leveldb">
 
 
 </manifest>
