Add codecov.io code coverage

--- a/leveldb/build.gradle
+++ b/leveldb/build.gradle
@@ -89,6 +89,12 @@ android {
         testHandleProfiling true
         testFunctionalTest true
     }
+    
+    buildTypes {
+        debug {
+            testCoverageEnabled = true
+        }
+    }
 }
 
 dependencies {
