--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,6 @@ before_script:
   - ./ci/wait_for_emulator.sh
 
 script: ./gradlew connectedCheck
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
