--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 env:
   matrix:
-    - ANDROID_ABI=x86_64
+    - ANDROID_ABI=armeabi-v7a
 
 android:
   components:
@@ -15,7 +15,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - android-24
-    - sys-img-x86_64-android-24
+    - sys-img-armeabi-v7a-android-24
 
 before_install:
   - jdk_switcher use oraclejdk8
