--- a/leveldb/build.gradle
+++ b/leveldb/build.gradle
@@ -2,18 +2,14 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-repositories {
-    mavenCentral()
-}
-
 def gitVersion = { ->
-  def stdout = new ByteArrayOutputStream()
-  exec {
-    commandLine 'git', 'describe', '--tags'
-    standardOutput = stdout
-  }
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'describe', '--tags'
+        standardOutput = stdout
+    }
 
-  return stdout.toString().trim()
+    return stdout.toString().trim()
 }
 
 def GIT_VERSION = gitVersion()
@@ -30,104 +26,119 @@ group 'com.github.hf'
 version VERSION
 
 install {
-  repositories.mavenInstaller {
-    pom.project {
-      name 'leveldb'
-      description 'LevelDB bindings for Android.'
-      url 'https://github.com/hf/leveldb-android'
-      inceptionYear '2014'
-        
-      packaging 'aar'
-      groupId 'com.github.hf'
-      artifactId 'leveldb'
-      
-      version VERSION
-      
-      licenses {
-        license {
-          name 'BSD 3-Clause'
-          url 'https://github.com/hf/leveldb-android/blob/master/LICENSE.txt'
-          distribution 'repo'
+    repositories.mavenInstaller {
+        pom.project {
+            name 'leveldb'
+            description 'LevelDB bindings for Android.'
+            url 'https://github.com/hf/leveldb-android'
+            inceptionYear '2014'
+
+            packaging 'aar'
+            groupId 'com.github.hf'
+            artifactId 'leveldb'
+
+            version VERSION
+
+            licenses {
+                license {
+                    name 'BSD 3-Clause'
+                    url 'https://github.com/hf/leveldb-android/blob/master/LICENSE.txt'
+                    distribution 'repo'
+                }
+            }
+
+            scm {
+                connection 'https://github.com/hf/leveldb-android.git'
+                url 'https://github.com/hf/leveldb-android'
+            }
+
+            developers {
+                developer {
+                    name 'Stojan Dimitrovski'
+                }
+            }
         }
-      }
-     
-      scm {
-        connection 'https://github.com/hf/leveldb-android.git'
-        url 'https://github.com/hf/leveldb-android'
-      }
-      
-      developers {
-        developer {
-          name 'Stojan Dimitrovski'
-        }
-      }
     }
-  }
 }
 
 bintray {
-  user = System.getenv('BINTRAY_USER')
-  key  = System.getenv('BINTRAY_KEY')
+    user = System.getenv('BINTRAY_USER')
+    key  = System.getenv('BINTRAY_KEY')
 
-  configurations = ['archives']
+    configurations = ['archives']
 
-  pkg {
-    repo = 'android'
-    name = 'leveldb-android'
-    licenses = ['BSD 3-Clause']
-    vcsUrl = 'https://github.com/hf/leveldb-android.git'
-    
-    userOrg = user
-    
-    websiteUrl = 'https://github.com/hf/leveldb-android'
-    issueTrackerUrl = 'https://github.com/hf/leveldb-android'
-    
-    githubRepo = 'hf/leveldb-android'
-    githubReleaseNotesFile = 'README.md'
-    
-    version {
-      name = VERSION
-      desc = "LevelDB (${LEVELDB_VERSION}) for Android."
-      released = new Date()
-      vcsTag = MAIN_VERSION
+    pkg {
+        repo = 'android'
+        name = 'leveldb-android'
+        licenses = ['BSD 3-Clause']
+        vcsUrl = 'https://github.com/hf/leveldb-android.git'
+
+        userOrg = user
+
+        websiteUrl = 'https://github.com/hf/leveldb-android'
+        issueTrackerUrl = 'https://github.com/hf/leveldb-android'
+
+        githubRepo = 'hf/leveldb-android'
+        githubReleaseNotesFile = 'README.md'
+
+        version {
+            name = VERSION
+            desc = "LevelDB (${LEVELDB_VERSION}) for Android."
+            released = new Date()
+            vcsTag = MAIN_VERSION
+        }
     }
-  }
 }
 
 android {
-    compileSdkVersion 24 
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 24 
+        minSdkVersion 14
+        targetSdkVersion 28
 
-        testApplicationId "com.github.hf.leveldb.test"
-        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testHandleProfiling true
         testFunctionalTest true
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-fno-rtti"
+            }
+        }
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            moduleName "leveldb"
+        }
     }
-    
+
     buildTypes {
         debug {
             testCoverageEnabled = true
         }
     }
-}
-
-dependencies {
-    androidTestCompile 'commons-io:commons-io:2.+'
-    androidTestCompile 'org.assertj:assertj-core:1.6.+'
-}
-
-task preBuildLevelDB {
-
-    doLast {
-        exec {
-            commandLine 'sh', projectDir.getAbsolutePath() + '/src/main/jni-prebuild/prebuild'
+    externalNativeBuild {
+        cmake {
+            version "3.10.2"
+            path "CMakeLists.txt"
         }
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 }
 
-preBuild.dependsOn preBuildLevelDB
-preBuild {}.mustRunAfter preBuildLevelDB
+dependencies {
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'com.google.truth:truth:0.42'
+    androidTestImplementation 'commons-io:commons-io:2.6'
+
+
+    testImplementation 'junit:junit:4.12'
+}
